--- a/resources/css/home.scss
+++ b/resources/css/home.scss
@@ -1,3 +1,8 @@
-body {
-    // background-color: bisque;
+h1 {
+    font-size: 36px;
 }
+
+footer a {
+    color: white;
+    text-decoration: none;
+  }
